# src/main/java/pl/aniazio/stronaRankingParkow/entities/ParkDetailed.java
@@ -1,0 +1,16 @@
+package pl.aniazio.stronaRankingParkow.entities;
+
+import lombok.Data;
+
+import java.util.List;
+
+@Data
+public class ParkDetailed extends Park {
+
+    List<Feature> pluses;
+    List<Feature> minuses;
+
+    public ParkDetailed(Park park) {
+        super(park);
+    }
+}
